--- a/views/partials/_navigation.ejs
+++ b/views/partials/_navigation.ejs
@@ -2,8 +2,8 @@
 <header class="top-navbar">
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">
-        <img src="images/logo.png" alt="" />
+      <a class="navbar-brand" href="/">
+        <img src="/images/logo.png" alt="" />
       </a>
       <button
         class="navbar-toggler"
@@ -27,7 +27,7 @@
             <a class="nav-link <%= page_name ==='about' && 'active' %>" href="/about">About Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="courses.html">Courses</a>
+            <a class="nav-link <%= page_name ==='courses' && 'active' %>" href="/courses">Courses</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="dashboard.html">Dashboard</a>
