--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -41,10 +41,10 @@
                     </div>
 
                     <ul class="footer-links">
-                        <li><a href="mailto:#">info@yoursite.com</a></li>
-                        <li><a href="#">www.yoursite.com</a></li>
-                        <li>PO Box 16122 Collins Street West Victoria 8007 Australia</li>
-                        <li>+61 3 8376 6284</li>
+                        <li><a href="mailto:#">ihsancetin92@gmail.com</a></li>
+                        <li><a href="#">https://github.com/ihsancetinn/</a></li>
+                        <li>Ankara/Turkey</li>
+                        <li>+90 312 6284</li>
                     </ul><!-- end links -->
                 </div><!-- end clearfix -->
             </div><!-- end col -->
@@ -57,7 +57,7 @@
     <div class="container">
         <div class="footer-distributed">
             <div class="footer-center">                   
-                <p class="footer-company-name">All Rights Reserved. &copy; 2018 <a href="#">SmartEDU</a> Design By : <a href="https://html.design/">html design</a></p>
+                <p class="footer-company-name">All Rights Reserved. &copy; 2022 <a href="#">SmartEDU</a> Design By : <a href="https://github.com/ihsancetinn/">html design</a></p>
             </div>
         </div>
     </div><!-- end container -->
