--- a/views/partials/_navigation.ejs
+++ b/views/partials/_navigation.ejs
@@ -29,13 +29,17 @@
           <li class="nav-item">
             <a class="nav-link <%= page_name ==='courses' && 'active' %>" href="/courses">Courses</a>
           </li>
+          <% if(userIN){ %>
           <li class="nav-item">
             <a class="nav-link" href="dashboard.html">Dashboard</a>
           </li>
+          <% } %>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
+
+        <% if(!userIN){ %>
         <ul class="nav navbar-nav navbar-right">
           <li>
             <a class="hover-btn-new log <%= page_name ==='login' && 'orange' %>"  mr-2" href="/login"
@@ -48,6 +52,17 @@
             ></a>
           </li>
         </ul>
+        <% } %>
+        <% if(userIN){ %>
+          <ul class="nav navbar-nav navbar-right">
+            <li>
+              <a class="hover-btn-new log <%= page_name ==='login' && 'orange' %>"  mr-2" href="/login"
+                ><span><i class="fa fa-sign-out" aria-hidden="true"></i></span
+              ></a>
+            </li>
+           
+          </ul>
+          <% } %>
       </div>
     </div>
   </nav>
