--- a/views/partials/_navigation.ejs
+++ b/views/partials/_navigation.ejs
@@ -31,7 +31,7 @@
           </li>
           <% if(userIN){ %>
           <li class="nav-item">
-            <a class="nav-link" href="dashboard.html">Dashboard</a>
+            <a class="nav-link <%= page_name ==='dashboard' && 'active' %>" href="/users/dashboard">Dashboard</a>
           </li>
           <% } %>
           <li class="nav-item">
@@ -56,7 +56,7 @@
         <% if(userIN){ %>
           <ul class="nav navbar-nav navbar-right">
             <li>
-              <a class="hover-btn-new log"  mr-2" href="users/logout"
+              <a class="hover-btn-new log"  mr-2" href="/users/logout"
                 ><span><i class="fa fa-sign-out" aria-hidden="true"></i></span
               ></a>
             </li>
