--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -2,6 +2,7 @@
 	<%- include('partials/_header.ejs'); %>
 	
 	<%- include('partials/_navigation.ejs'); %>
+	<% if(user){   %>
 
 	<div class="all-title-box">
 		<div class="container text-center">
@@ -93,5 +94,6 @@
             </div><!-- end row -->
         </div><!-- end container -->
     </div><!-- end section -->
+	<% } %>
 
 	<%- include('partials/_footer.ejs'); %>
