--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -32,7 +32,7 @@
 						</div>
 						<div class="course-meta-bot">
 							<ul>
-								<li><i class="fa fa-user" aria-hidden="true"></i>İhsan</li>
+								<li><i class="fa fa-lesson" aria-hidden="true"> <%= courses[i].name %> </i></li>
 							</ul>
 						</div>
 					</div>
