--- a/views/course.ejs
+++ b/views/course.ejs
@@ -1,10 +1,10 @@
-<%- include('partials/_header.ejs'); %>
-	
-<%- include('partials/_navigation.ejs'); %>
+<%- include('partials/_header'); %>
+
+<%- include('partials/_navigation'); %>
 	
 	<div class="all-title-box">
 		<div class="container text-center">
-			<h1><%= course.name %> <span class="m_1">Lorem Ipsum dolroin gravida nibh vel velit.</span></h1>
+			<h1><%= course.name %><span class="m_1">Lorem Ipsum dolroin gravida nibh vel velit.</span></h1>
 		</div>
 	</div>
 	
@@ -25,31 +25,24 @@
 								<span><i class="fa fa-calendar"></i> <a href="#">May 11, 2015</a> </span>
 							</div>
 							<div class="blog-title">
-								<h2><a href="#" title=""><%= course.name %> </a></h2>
+								<h2><a href="#" title=""><%= course.name %></a></h2>
 							</div>
 							<div class="blog-desc">
+								
 								<blockquote class="default">
 									<%= course.description %>
 								</blockquote>
+
 							</div>							
 						</div>
 					</div>
-					
+					x
 					<div class="blog-author">
+						
 						<div class="author-bio">
-							<h3 class="author_name"><a href="#">İhsan Cetin</a></h3>
-							<h5>CEO at <a href="#">SmartEDU</a></h5>
-							<p class="author_det">
-								Lorem ipsum dolor sit amet, consectetur adip, sed do eiusmod tempor incididunt  ut aut reiciendise voluptat maiores alias consequaturs aut perferendis doloribus omnis saperet docendi nec, eos ea alii molestiae aliquand.
-							</p>
-						</div>
-						<div class="author-desc">
-							<img src="images/author.jpg" alt="about author">
-							<ul class="author-social">
-								<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="#"><i class="fa fa-skype"></i></a></li>
-							</ul>
+							<h4>Lesson Teacher</h4>
+							<h3 class="author_name"><a href="#"><%= course.user.name %></a></h3>
+
 						</div>
 					</div>
 					
@@ -81,4 +74,4 @@
         </div><!-- end container -->
     </div><!-- end section -->
 
-	<%- include('partials/_footer.ejs'); %>
+	<%- include('partials/_footer'); %>
