--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -32,7 +32,7 @@
 						</div>
 						<div class="course-meta-bot">
 							<ul>
-								<li><%= courses[i].name %> </li>
+								<li><%= courses[i].user.name %> </li>
 							</ul>
 						</div>
 					</div>
@@ -44,10 +44,10 @@
 				<div class="col-lg-3 col-12 right-single">
 					<div class="widget-search">
 						<div class="site-search-area">
-							<form method="get" id="site-searchform" action="#">
+							<form method="GET" id="site-searchform" action="/courses">
 								<div>
-									<input class="input-text form-control" name="search-k" id="search-k" placeholder="Search keywords..." type="text">
-									<input id="searchsubmit" value="Search" type="submit">
+									<input class="input-text form-control" name="search" id="search" placeholder="Search" type="text">
+									<button id="searchsubmit" value="Search" type="submit">Search</button>
 								</div>
 							</form>
 						</div>
