--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -17,13 +17,13 @@
 							<div class="col-lg-12 blog-post-single">
 								<div class="blog-author">
 									<div class="author-bio">
-										<h3 class="author_name">Course Enrolled By: <%= user.name %></h3>	
+										<h3 class="author_name"><a href="#"> Courses Enrolled by:  <%= user.name %></a></h3>
 									</div>
 								</div>
 							</div><!-- end col -->
 						</div><!-- end row -->
 						<div class="row mt-5">
-							<% for (let i=0; i<user.courses.length; i++){ %>
+							<% for (let i=0; i< user.courses.length; i++) { %>
 							<div class="col-lg-6 col-md-6 col-12">
 								<div class="course-item mb-5">
 									<div class="image-blog">
@@ -31,24 +31,23 @@
 									</div>
 									<div class="course-br">
 										<div class="course-title">
-											<h2><a href="course-single.html" title=""><%= user.courses[i].name %></a></h2>
+											<h2><a href="course-single.html" title=""><%= user.courses[i].name %> </a></h2>
 										</div>
 										<div class="course-desc">
-											<p><%= user.courses[i].description.substring(0, 50) + "..." %> </p>
-											<form action="/courses/release" method="POST">
+											<p><%= user.courses[i].description %> </p>
+											<form method="POST" action="/courses/release">
 												<input type="hidden" name="course_id" value="<%= user.courses[i]._id %>">
-											<button class="btn btn-lg btn-danger text-white"><span>RELEASE</span></button>
-										</form>
+												<button class="btn btn-lg btn-danger text-white"><span>RELEASE</span></button>
+											</form>
 										</div>
 									</div>
 								</div>
 							</div><!-- end col -->
-							<% } %>
-
+							<% } %>	
 						</div><!-- end row -->
 					</div><!-- end container -->
 				</div><!-- end section -->
-				<% } %>
+			<% } %>
 					<% if(user.role==='teacher' ) { %>
 						<div class="all-title-box">
 							<div class="container text-center">
@@ -60,6 +59,19 @@
 						<div id="overviews" class="section wb">
 							<div class="container">
 								<div class="row">
+									<% if (flashMessages) { %>
+										<% if (flashMessages.success) { %>
+											<div class="alert alert-success">
+												<%= flashMessages.success %>
+											</div>
+					
+										<% } else if (flashMessages.error) { %>
+											<div class="alert alert-danger">
+												<%= flashMessages.error %>
+											</div>
+										<% } %>
+					
+									<% } %>
 									<!-- Modal Button -->
 									<div class="col-lg-12 text-center ">
 										<button class="btn btn-lg btn-warning rounded-0 text-white" href="#"
@@ -86,7 +98,20 @@
 													<h2><a href="/courses/<%= courses[i].slug %>" title=""><%= courses[i].name %></a></h2>
 												</div>
 												<div class="course-desc">
-													<p><%= courses[i].description.substring(0, 50) + " ..." %> </p>
+													<p><%= courses[i].description %> </p>
+												</div>
+												<div class="clearfix">
+													<ul style="list-style-type: none;">
+														<li style="float: left;">
+															<button class="btn btn-primary rounded-0 text-white"><span>UPDATE</span></button>
+														</li>
+
+														<li style="float: right;">
+															<a href="/courses/<%= courses[i].slug %>?_method=DELETE" 
+															onclick="return confirm('ARE YOU SURE')"
+															class="btn btn-danger rounded-0 text-white"><span>DELETE</span>
+														</a></li>
+													</ul>
 												</div>
 											</div>
 										</div>
