--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,4 @@
-<%- include('partials/_header'); %>
-
-<%- include('partials/_navigation'); %>
-	
+<%- include('partials/_header') %> <%- include('partials/_navigation') %>
 	
 	<div id="carouselExampleControls" class="carousel slide bs-slider box-slider" data-ride="carousel" data-pause="hover" data-interval="false" >
 		<!-- Indicators -->
@@ -16,7 +13,7 @@
 							<div class="row">
 								<div class="col-md-12 col-sm-12 text-right">
 									<div class="big-tagline">
-										<h2><strong>SmartEDUX </strong> education College</h2>
+										<h2><strong>SmartEDU </strong> education College</h2>
 										<p class="lead">With Landigoo responsive landing page template, you can promote your all hosting, domain and email services. </p>
 											<a href="#" class="hover-btn-new"><span>Contact Us</span></a>
 											&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -54,7 +51,7 @@
         <div class="container">
             <div class="section-title row text-center">
                 <div class="col-md-8 offset-md-2">
-                    <h3>Latest Courses</h3>
+                    <h3>About</h3>
                     <p class="lead">Lorem Ipsum dolroin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem!</p>
                 </div>
             </div><!-- end title -->
@@ -62,33 +59,34 @@
             <div class="row align-items-center">
                 <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
                     <div class="message-box">
-
+						<% if (courses[0]) { %>
                         <h2><%= courses[0].name %></h2>
                         <p><%= courses[0].description %></p>
-
                         <a href="/courses/<%= courses[0].slug %>" class="hover-btn-new orange"><span>Learn More</span></a>
+						<% } %>
                     </div><!-- end messagebox -->
                 </div><!-- end col -->
 				
 				<div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
                     <div class="post-media wow fadeIn">
-                        <img src="images/about_02.jpg" alt="" class="img-fluid img-rounded">
+                        <img src="/images/about_02.jpg" alt="" class="img-fluid img-rounded">
                     </div><!-- end media -->
                 </div><!-- end col -->
 			</div>
 			<div class="row align-items-center">
 				<div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
                     <div class="post-media wow fadeIn">
-                        <img src="images/about_03.jpg" alt="" class="img-fluid img-rounded">
+                        <img src="/images/about_03.jpg" alt="" class="img-fluid img-rounded">
                     </div><!-- end media -->
                 </div><!-- end col -->
 				
 				<div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
                     <div class="message-box">
+						<% if (courses[1]) { %>
                         <h2><%= courses[1].name %></h2>
                         <p><%= courses[1].description %></p>
-
-                        <a href="/courses/<%= courses[0].slug %>" class="hover-btn-new orange"><span>Learn More</span></a>
+                        <a href="/courses/<%= courses[1].slug %>" class="hover-btn-new orange"><span>Learn More</span></a>
+						<% } %>
                     </div><!-- end messagebox -->
                 </div><!-- end col -->
 				
@@ -101,20 +99,20 @@
 			<div class="row text-left stat-wrap">
 				<div class="col-md-4 col-sm-4 col-xs-12">
 					<span data-scroll class="global-radius icon_wrap effect-1 alignleft"><i class="flaticon-study"></i></span>
-					<p class="stat_count"><%= totalStudents %></p>
+					<p class="stat_count"><%= totalStudent %></p>
 					<h3>Students</h3>
 				</div><!-- end col -->
 
 				<div class="col-md-4 col-sm-4 col-xs-12">
 					<span data-scroll class="global-radius icon_wrap effect-1 alignleft"><i class="flaticon-online"></i></span>
-					<p class="stat_count"><%= totalCourses %></p>
-					<h3>Courses</h3>
+					<p class="stat_count"><%= totalTeacher %></p>
+					<h3>Teacher</h3>
 				</div><!-- end col -->
 
 				<div class="col-md-4 col-sm-4 col-xs-12">
 					<span data-scroll class="global-radius icon_wrap effect-1 alignleft"><i class="flaticon-years"></i></span>
-					<p class="stat_count"><%= totalTeachers %></p>
-					<h3>Teachers</h3>
+					<p class="stat_count"><%= totalCourses %></p>
+					<h3>Courses</h3>
 				</div><!-- end col -->
 			</div><!-- end row -->
 		</div><!-- end container -->
@@ -124,25 +122,25 @@
         <div class="container">
             <div class="row logos">
                 <div class="col-md-2 col-sm-2 col-xs-6 wow fadeInUp">
-                    <a href="#"><img src="images/logo_01.png" alt="" class="img-repsonsive"></a>
+                    <a href="#"><img src="/images/logo_01.png" alt="" class="img-repsonsive"></a>
                 </div>
                 <div class="col-md-2 col-sm-2 col-xs-6 wow fadeInUp">
-                    <a href="#"><img src="images/logo_02.png" alt="" class="img-repsonsive"></a>
+                    <a href="#"><img src="/images/logo_02.png" alt="" class="img-repsonsive"></a>
                 </div>
                 <div class="col-md-2 col-sm-2 col-xs-6 wow fadeInUp">
-                    <a href="#"><img src="images/logo_03.png" alt="" class="img-repsonsive"></a>
+                    <a href="#"><img src="/images/logo_03.png" alt="" class="img-repsonsive"></a>
                 </div>
                 <div class="col-md-2 col-sm-2 col-xs-6 wow fadeInUp">
-                    <a href="#"><img src="images/logo_04.png" alt="" class="img-repsonsive"></a>
+                    <a href="#"><img src="/images/logo_04.png" alt="" class="img-repsonsive"></a>
                 </div>
                 <div class="col-md-2 col-sm-2 col-xs-6 wow fadeInUp">
-                    <a href="#"><img src="images/logo_05.png" alt="" class="img-repsonsive"></a>
+                    <a href="#"><img src="/images/logo_05.png" alt="" class="img-repsonsive"></a>
                 </div>
                 <div class="col-md-2 col-sm-2 col-xs-6 wow fadeInUp">
-                    <a href="#"><img src="images/logo_06.png" alt="" class="img-repsonsive"></a>
+                    <a href="#"><img src="/images/logo_06.png" alt="" class="img-repsonsive"></a>
                 </div>
             </div><!-- end row -->
         </div><!-- end container -->
     </div><!-- end section -->
 
-    <%- include('partials/_footer'); %>
+<%- include('partials/_footer') %>
